# aitrader

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  aitrader.cpp  aitrader.pro  makefile
.github/workflows/: docker-publish.yml  makefile.yml
config/: config.sh
src/include/: candlestick.h  http.h  trade.h  user.h
src/include/database/: database.h  sqlite3.h
src/include/mlm/: mlm.h
src/tests/: run_tests.cpp
src/ui/: dashboard.cpp  home.cpp
